--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=CK-INSURANCE
+APP_NAME=CK-CarSales
 APP_ENV=local
 APP_KEY=base64:+skjx88PjPFLrzRlGcZkiOZiMDBqSFIOIKApin1jSa8=
 APP_DEBUG=true
